Fix bugs when comparing and converting gbnds with infinity end points
When comparing end points 1 with positive infinity and -1 with negative infinity
and converting gbnd to ubnd
functions ltgQ, gtgQ and u2g failed to check infinity bit.
Fix this bug and add related tests.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,7 +2,8 @@
 # This Makefile.am is free software; the Free Software Foundation
 # gives unlimited permission to copy, distribute and modify it.
 
-check_PROGRAMS = tbasic tulayer tunumxx
+check_PROGRAMS = tbasic tulayer tunumxx tcomparison
+
 tunumxx_SOURCES = tunumxx.cpp
 EXTRA_DIST = tdev.mak tdevxx.mak tdev.c
 AM_CPPFLAGS = -I$(top_srcdir)/src
